# bitextor

./: .gitignore  .gitmodules  .readthedocs.yaml  AUTHORS  CMakeLists.txt  CREDITS  Dockerfile  INSTALL  INSTALL.md  Makefile.am  NEWS  README  README.md  SECURITY.md  Snakefile  Snakefile.base  Snakefile.nmt  autogen.sh  baseline.conf  bifixer.sh  bitextor-addtextstats.in  bitextor-align-documents.1  bitextor-align-documents.in  bitextor-align-documents.py  bitextor-align-segments-moses.py  bitextor-align-segments.in  bitextor-align-segments.py  bitextor-boilerpipe.py  bitextor-build-docalign.py  bitextor-buildTMX-dedup.py  bitextor-buildTMX-dedupRAM.py  bitextor-buildTMX.1  bitextor-buildTMX.in  bitextor-buildTMX.py  bitextor-builddics.1  bitextor-builddics.in  bitextor-builddics.sh  bitextor-buildidx.py  bitextor-cleantextalign.1  bitextor-cleantextalign.py  (+93 more)
bleualign-cpp/: CMakeLists.txt  README.md  main.cpp
bleualign-cpp/src/: align.cpp  align.h  ngram.cpp  ngram.h  scorer.cpp  search.cpp  search.h
bleualign-cpp/src/utils/: CompressedWriter.cpp  CompressedWriter.h  common.h
bleualign-cpp/tests/: test_align.cpp  test_all.cpp  test_scorer.cpp  test_search.cpp
branches/bitextor-2.0.0/src/: Bitextor.cpp  DownloadMod.cpp  FilePreprocess.cpp  FilePreprocess.h  GlobalParams.cpp  GlobalParams.h  Makefile  Makefile.am  Makefile.in  WebFile.cpp  config.xml
branches/bitextor-3.0/: configure.ac
branches/bitextor-3.0/conf/: config.xml
branches/bitextor-3.0/src/: Bitext.cpp  Bitext.h  Bitextor.cpp  DownloadMod.h  GlobalParams.cpp  GlobalParams.h  Heuristics.cpp  Heuristics.h  Makefile.am  WebFile.cpp  WebFile.h  WebSite.cpp  WebSite.h
branches/bitextor-3.0/test/: Makefile.am  TestGlobalParams.cpp  TestGlobalParams.h
branches/bitextor-fulltable/piped-boilerpipe/: Makefile.am  manifest.mf
branches/bitextor-python3only/: Makefile.am  bitextor-align-documents.in  bitextor-align-segments.in  bitextor-buildTMX.in  bitextor-cleantextalign.in  bitextor-idx2ridx.in  bitextor-lett2idx-freq.in  bitextor-lett2idx.in  bitextor-lett2lettr.in  bitextor-score-document-alignment.in  bitextor-train-document-alignment.in  configure.ac  install_nltk_data.py
branches/prompsit/: AUTHORS  DocumentacionBitextor-4.odt  Makefile.am  README  TODO  bitextor-align-documents.1  bitextor-align-documents.in  bitextor-align-segments.1  bitextor-align-segments.in  bitextor-aligner.in  bitextor-buildTMX.1  bitextor-buildTMX.in  bitextor-builddics.in  bitextor-cleantextalign.1  bitextor-cleantextalign.in  bitextor-combineridx.in  bitextor-distancefilter.1  bitextor-distancefilter.in  bitextor-documentaligner.in  bitextor-downloadweb.1  bitextor-downloadweb.in  bitextor-downloadwebs.in  bitextor-ett2lett.1  bitextor-ett2lett.in  bitextor-idx2ridx.1  bitextor-idx2ridx.in  bitextor-lett2idx.1  bitextor-lett2idx.in  bitextor-lett2lettr.1  bitextor-lett2lettr.in  bitextor-score-document-alignment.in  bitextor-webdir2ett.1  bitextor-webdir2ett.in  bitextor.1  bitextor.in  configure.ac  diccionario.dic
branches/prompsit/simpleHTMLreader/: Makefile  Makefile.am  Makefile.in  simpleHTMLreader.py
branches/prompsit/splitsentences/: Makefile  Makefile.am  Makefile.in  tokenizer.perl
branches/prompsit/textcat/: CHANGES  Makefile.am  README  competitors.html  index.html  list.html  random_lines  text_cat
branches/prompsit/tika/: Makefile.in
branches/prompsit/utils/: Makefile.am  tokenizer.perl
branches/tld/: README  bitextor-crawl.in  bitextor.in  configure.ac
branches/tld/features/: bitextor-structuredistance.in
branches/tld/model/: Makefile.am
branches/url_filtering/src/: Url.h  (+13 more)
document-aligner/: .gitignore  CMakeLists.txt  Makefile  README.md  base64.cpp  base64.h  blocking_queue.h  build_docs.py  catdoc.cpp  compute_matches.py  doc_align.sh  docalign.cpp  docjoin.cpp  document.cpp  document.h  external_processor.py  main.cpp  ngram.cpp  ngram.h  requirements.txt  scorer.py  substitute_translated.py  translate_extracted.sh  transparent_fstream.cpp  transparent_fstream.h
document-aligner/src/: base64.cpp  base64.h  blocking_queue.h  document.cpp  document.h  hashmap.h  murmur_hash.cpp  murmur_hash.h  ngram.cpp  ngram.h
document-aligner/tests/: expected  ngram_test.cpp  run_tests.sh  translate_script.sh
document-aligner/utils/: __init__.py  common.py  external_processor.py  extract_lett-moses.py  extract_lett.py  extracted2base64.py  split-sentences.perl  textsanitzer.py  tokenize_lett.py  translate_table.py
giza-pp/GIZA++-v2/: Makefile.am
piped-boilerpipe/: Makefile  Makefile.am  Makefile.in  manifest.mf  pom.xml
tags/bitextor-1.0.0/: Makefile.am  README  THANKS
trunk/: DocumentacionBitextor-4.odt  Makefile.am  README  autogen.sh  bitextor-align-documents.in  bitextor-align-segments.1  bitextor-align-segments.in  bitextor-buildTMX.1  bitextor-buildTMX.in  bitextor-builddics.1  bitextor-builddics.in  bitextor-cleantextalign.in  bitextor-crawl.in  bitextor-crawl2ett.in  bitextor-distancefilter.1  bitextor-distancefilter.in  bitextor-ett2lett.in  bitextor-idx2ridx.1  bitextor-lett2idx-freq.in  bitextor-lett2idx.1  bitextor-lett2idx.in  bitextor-lett2lettr.1  bitextor-lett2lettr.in  bitextor-morphanalysis.in  bitextor-ridx2filenames.in  bitextor-score-document-alignment.1  bitextor-score-document-alignment.in  bitextor-webdir2ett.1  bitextor-webdir2ett.in  bitextor.1  bitextor.in  configure.ac  diccionario.dic
trunk/apache-tika/: Makefile.am
trunk/bitextor/: Makefile.am  README  autogen.sh  collectormain.cpp  conf.txt  configure.ac
trunk/bitextor-2.0.0/: Makefile  Makefile.am  Makefile.in  config.status  configure
trunk/features/: bitextor-urlscomparison.in
trunk/giza-pp/: README
trunk/hunalign-src/: Makefile.am  readme.html
trunk/model/: keras.model
trunk/piped-boilerpipe/: Makefile.am  manifest.mf
trunk/piped-tika/: Makefile.am  manifest.mf
trunk/resources/: elperiodico.txt
trunk/scripts/: downloadpage.sh
trunk/ulyses/: Makefile.am
trunk/ulysses/: Makefile.am  setup.py
trunk/ulysses-data/: Makefile.am
trunk/utils/: unicodepunct.py
ulysses-data/: Makefile.am
(+1476 files in other folders)
